objects/VCS_Commit__c.object
<CustomObject>
 <fullName>VCS_Commit__c</fullName>
 <fields>
  <fullName>Backlog_Components__c</fullName>
  <label>Backlog Components</label>
  <length>131072</length>
  <type>LongTextArea</type>
 </fields>
 <fields>
  <fullName>Backlog_Item__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Backlog Item</label>
  <referenceTo>Backlog__c</referenceTo>
  <relationshipLabel>VCS Commits</relationshipLabel>
  <relationshipName>VCS_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Branch_Name__c</fullName>
  <label>Branch Name</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Commit_Message__c</fullName>
  <label>Commit Message</label>
  <type>TextArea</type>
 </fields>
 <fields>
  <fullName>Commit_Owner__c</fullName>
  <label>Commit Owner</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>External_Commit_Id__c</fullName>
  <externalId>true</externalId>
  <label>External Commit Id</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>External_Commit_URL__c</fullName>
  <formula>CASE(LOWER(TEXT(VCS_Repository__r.Host__c)),
'github',
HYPERLINK("https://github.com/" + VCS_Repository__r.Organization_Name__c +  "/" + VCS_Repository__r.Name + "/commit/" + External_Commit_Id__c, External_Commit_Id__c),
"bitbucket",
HYPERLINK("https://bitbucket.org/" + VCS_Repository__r.Organization_Name__c +  "/" + VCS_Repository__r.Name + "/commits/" + External_Commit_Id__c, External_Commit_Id__c),
'')</formula>
  <label>External Commit URL</label>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>Response_Message__c</fullName>
  <label>Response Message</label>
  <type>TextArea</type>
 </fields>
 <fields>
  <fullName>Source_Instance__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Source Instance</label>
  <referenceTo>Instances__c</referenceTo>
  <relationshipLabel>VCS Commits</relationshipLabel>
  <relationshipName>VCS_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <fields>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
   <restricted>true</restricted>
   <valueSetDefinition>
    <value>
     <fullName>Pending</fullName>
    </value>
    <value>
     <fullName>In Progress</fullName>
    </value>
    <value>
     <fullName>Success</fullName>
    </value>
    <value>
     <fullName>Failed</fullName>
    </value>
    <value>
     <fullName>Failure</fullName>
     <isActive>false</isActive>
     <label>Failure</label>
    </value>
   </valueSetDefinition>
  </valueSet>
 </fields>
 <fields>
  <fullName>UUID__c</fullName>
  <externalId>true</externalId>
  <label>UUID</label>
  <length>255</length>
  <type>Text</type>
 </fields>
 <fields>
  <fullName>VCS_Repository__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Repository</label>
  <referenceTo>VCS_Repository__c</referenceTo>
  <relationshipLabel>VCS Commits</relationshipLabel>
  <relationshipName>VCS_Commits</relationshipName>
  <type>Lookup</type>
 </fields>
 <label>VCS Commit</label>
 <nameField>
  <displayFormat>VC-{00000}</displayFormat>
  <label>VCS Commit Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>VCS Commits</pluralLabel>
 <sharingModel>ReadWrite</sharingModel>
</CustomObject>